--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Java Enterprise (Topjava)</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
