--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,9 +6,21 @@
 <body>
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
+
+<form id="login" action="users" method="GET">
+    <label>
+        <select name="userId">
+            <option value="1">1</option>
+            <option value="2">2</option>
+        </select>
+    </label>
+    <input type="submit" name="action" value="login">
+</form>
+
 <ul>
     <li><a href="users">Users</a></li>
     <li><a href="meals">Meals</a></li>
 </ul>
+
 </body>
 </html>
