--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
 
-<form id="login" action="users" method="GET">
+<form id="login" action="users" method="post">
     <label>
         <select name="userId">
             <option value="1">1</option>
